[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "procurement"
version = "0.1.0"
description = "Lightweight procurement management system"
authors = [{name = "Procurement Team"}]
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
